--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://neondb_owner:npg_poRN0syaG5DH@ep-late-unit-ahcmftl8-pooler.c-3.us-east-1.aws.neon.tech/SOCCER_DB?sslmode=require&channel_binding=require
+#DATABASE_URL=postgresql://neondb_owner:npg_poRN0syaG5DH@ep-late-unit-ahcmftl8-pooler.c-3.us-east-1.aws.neon.tech/SOCCER_DB?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://postgres:admin@localhost:5432/soccer_api
+#DATABASE_URL=postgresql+asyncpg://postgres:admin@localhost:5432/soccer_api
